--- a/CopyTextComponent/PCFCopyTextComponent/css/PCFCopyTextComponent.css
+++ b/CopyTextComponent/PCFCopyTextComponent/css/PCFCopyTextComponent.css
@@ -9,12 +9,12 @@
 	EXPRESSED OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE IMPLIED WARRANTIES OF  
 	MERCHANTABILITY AND/OR FITNESS FOR A PARTICULAR PURPOSE. 
  */
-.CanvizPCF\.PCFCopyTextComponent > div {
+.CanvizLLCPCF\.PCFCopyTextComponent > div {
 	display: flex;
 	align-items: flex-start;
 }
 
-.CanvizPCF\.PCFCopyTextComponent .CopyText_Button_Style {
+.CanvizLLCPCF\.PCFCopyTextComponent .CopyText_Button_Style {
 	text-decoration: none;
     display: inline-block;
     font-size: 14px;
@@ -28,11 +28,11 @@
     text-align: center;
 }
 
-.CanvizPCF\.PCFCopyTextComponent .CopyText_Input_Error_Style{
+.CanvizLLCPCF\.PCFCopyTextComponent .CopyText_Input_Error_Style{
 	color: red;
 }
 
-.CanvizPCF\.PCFCopyTextComponent .CopyText_Input_Style{
+.CanvizLLCPCF\.PCFCopyTextComponent .CopyText_Input_Style{
 	box-sizing: border-box;
 	border: 1px solid rgb(0, 18, 107);
 }
